--- a/GitDemo/Views/Shared/_Layout.cshtml
+++ b/GitDemo/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
 ﻿<!DOCTYPE html>
+
+@{ var applicationName = "GitDemo"; 
+                 }
 <html>
 <head>
     <meta charset="utf-8" />
@@ -31,7 +34,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - My ASP.NET @applicationName</p>
         </footer>
     </div>
 
